--- a/pagina01.html
+++ b/pagina01.html
@@ -42,7 +42,7 @@
 			</div>
 
 			<div id="mamifero" style="text-align: center;background-color: #4D9E7D;margin-top: 20px;padding:20px"><!--este contenedor se creo--> 
-                <h1>MAMIFEROS</h1>                
+                <h1>Mamiífero</h1>                
 				<p>
 					El guanaco es el camélido silvestre más grande de Sudamérica. Y solo en Perú existe la subespecie Lama guanicoe cacsilensis, que se distribuye desde La Libertad en el norte, hasta Puno y Tacna en el sur,Está en peligro crítico de extinción, pues se calcula que solo hay 3000 ejemplares. Se teme que, de continuar su cacería furtiva, esta especie desaparecería en 30 años</p>
 				<img class="centrado" width="300" src="img/p.jpg"> 
