--- a/pagina03.html
+++ b/pagina03.html
@@ -30,7 +30,7 @@
 						  <img class="d-block w-100" src="img/tuburon.jpg" alt="Second slide">
 						</div>
 						<div class="carousel-item">
-						  <img class="d-block w-100" src="img/slide5.jpg" alt="Third slide">
+						  <img class="d-block w-100" src="img/orca.jpg" alt="Third slide">
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
